--- a/Class1.html
+++ b/Class1.html
@@ -61,10 +61,25 @@
         <li>3</li>
     </ol>
 
-    <a>请输入邮箱</a> <input type="text" value="11111111">
+    <a>请输入邮箱</a> <input type="text" value="11111111"> <br>
 
     <label><input type="radio" name="sex" value=""> boy </label> <br>
     <label><input type="radio" name="sex" value=""> girl </label>
+
+    <table border="1">
+        <tr>
+            <td>1, 1</td>
+            <td>1, 2</td>
+        </tr>
+
+        <tr>
+            <td>2, 1</td>
+            <td>2, 2</td>
+        </tr>
+
+
+    </table>
+
 
 
 
